--- a/Frontend/src/pages/modificarUsuario/modificarUsuario.css
+++ b/Frontend/src/pages/modificarUsuario/modificarUsuario.css
@@ -25,13 +25,15 @@
   padding: 1rem;
   padding-bottom: 0;
   background-color: azure;
-  width: 95%;
-  height: 100%;
+
   align-self: flex-start;
   box-shadow: 2px 2px 5px rgba(26, 53, 115, 0.6);
   background-color: rgb(226, 223, 223);
   border-radius: 5px;
   gap: 0.5rem;
+}
+textarea {
+  resize: none;
 }
 
 .form-modificar-usuario > form {
@@ -46,10 +48,16 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem 0;
-  border: 2px solid rgba(0, 0, 0, 0.3);
+  border: none;
   border-radius: 5px;
 }
-
+#image {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  object-fit: cover;
+}
 .file-upload-component {
   display: flex;
   flex-direction: column;
@@ -152,7 +160,18 @@
 #deleteUserEmail {
   height: 70%;
 }
-
+.borrarUsuario {
+  background-color: red;
+  color: rgb(252, 250, 250);
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 16px;
+}
+.borrarUsuario:hover {
+  background-color: rgb(226, 17, 17);
+  box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.5);
+}
 @media (min-width: 600px) {
   .contenedor-modificar-usuario {
     display: grid;
@@ -178,7 +197,7 @@
     grid-area: formulario-usuario;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.5fr 0.25fr 0.25fr;
+    grid-template-rows: 1fr 0.2fr 0.2fr 0.2fr;
     justify-items: flex-start;
     background-color: azure;
     width: 95%;
@@ -188,11 +207,12 @@
     background-color: rgb(226, 223, 223);
     border-radius: 5px;
     gap: 0.5rem;
-
+    /* el grid no funciona */
     grid-template-areas:
       "formulario-usuario divFotoUsuario"
-      "formulario-usuario divContrasena"
-      "formulario-usuario divDeleteUsuario";
+      "formulario-usuario divContraseña"
+      "divGuardarCambios divGuardarCambios"
+      "divDeleteUsuario divDeleteUsuario";
   }
   .header {
     position: absolute;
@@ -207,23 +227,28 @@
     align-items: center;
     justify-content: start;
   }
-
   .div-fotoUsuario {
     grid-area: divFotoUsuario;
-    grid-column: 2;
+    height: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1rem 0;
-    border: 2px solid rgba(0, 0, 0, 0.3);
+    border: none;
     border-radius: 5px;
-    height: 300px;
   }
-}
-.div-contraseña {
-  grid-area: divContrasena;
-}
 
-.div-delete-usuario {
-  grid-area: divDeleteUsuario;
+  .div-contraseña {
+    grid-area: divContraseña;
+  }
+
+  .btn-guardar-cambios {
+    grid-area: divGuardarCambios;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .div-delete-usuario {
+    grid-area: divDeleteUsuario;
+  }
 }
