--- a/Frontend/src/pages/login/login.css
+++ b/Frontend/src/pages/login/login.css
@@ -36,3 +36,10 @@
   align-items: center;
   margin: auto;
 }
+
+.error-login {
+  color: rgb(173, 47, 47);
+  margin-top: 0.5rem;
+  font-size: 1em;
+  font-style: italic;
+}
