--- a/Frontend/src/pages/modificarNoticia/modificarNoticia.css
+++ b/Frontend/src/pages/modificarNoticia/modificarNoticia.css
@@ -24,7 +24,7 @@
   padding: 1rem;
   padding-bottom: 0;
   background-color: azure;
-  width: 95%;
+  width: 375px;
   height: 90%;
   align-self: flex-start;
   box-shadow: 2px 2px 5px rgba(26, 53, 115, 0.6);
