--- a/Frontend/src/pages/HomePageLogin/noticiasLogueado.css
+++ b/Frontend/src/pages/HomePageLogin/noticiasLogueado.css
@@ -105,7 +105,7 @@ img {
   .contenedor-log {
     display: grid;
 
-    grid-template-rows: 5rem 5rem auto 5rem;
+    grid-template-rows: 5rem 5rem auto 3rem;
     grid-template-columns: 70% 30%;
     grid-template-areas:
       "segundoNav segundoNav"
@@ -144,9 +144,7 @@ img {
     border-radius: 5px;
     background-color: #bbc4f1;
   }
-  .paginate {
-    padding-bottom: 3rem;
-  }
+
   .contenedor-temas button {
     width: 9rem;
   }
@@ -227,5 +225,14 @@ img {
   }
   .contenedor-noticiasLogueado div h3 {
     font-size: 1.7em;
+  }
+}
+
+@media (min-width: 900px) {
+  .noticias-acciones {
+    justify-content: flex-end;
+  }
+  .contenedor-noticiasLogueado {
+    margin-left: 8rem;
   }
 }
