--- a/Frontend/src/pages/modificarUsuario/modificarUsuario.css
+++ b/Frontend/src/pages/modificarUsuario/modificarUsuario.css
@@ -14,6 +14,7 @@
   position: relative;
   background-image: url("../../../public/dark-bg.jpg");
   background-size: contain;
+  padding-bottom: 2rem;
 }
 
 .form-modificar-usuario {
@@ -52,11 +53,22 @@ textarea {
   border-radius: 5px;
 }
 #image {
-  width: 200px;
-  height: 200px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   border: 2px solid rgba(0, 0, 0, 0.3);
   object-fit: cover;
+}
+
+#input-email,
+#input-nombre,
+#input-nickName,
+#input-biografia,
+#deleteUserEmail,
+#input-newPassword,
+#input-confirmPassword::placeholder {
+  background-color: rgb(183, 148, 240);
+  color: rgb(8, 11, 136);
 }
 .file-upload-component {
   display: flex;
@@ -69,8 +81,9 @@ textarea {
 .div-contraseña {
   display: flex;
   flex-direction: column;
-  align-items: start;
-  gap: 0.3rem;
+  justify-content: center;
+  max-width: 100%;
+  gap: 0.2rem;
   padding-top: 0.8rem;
 }
 
@@ -81,11 +94,19 @@ textarea {
 .div-contraseña input {
   width: 70%;
 }
-
+.guardar-cambios {
+  grid-area: divGuardarCambios;
+  display: flex;
+  justify-self: center;
+  align-self: center;
+  flex-direction: column;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .div-delete-usuario {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   gap: 0.3rem;
   padding: 0.8rem 0;
   width: 100%;
@@ -102,7 +123,10 @@ textarea {
   gap: 0.5rem;
   width: 100%;
 }
-
+.labelConfirmPassword,
+.labelNewPassword {
+  font-weight: bold;
+}
 #input-confirmPassword {
   margin-bottom: 0.3rem;
 }
@@ -186,17 +210,18 @@ textarea {
     justify-content: center;
     align-items: center;
     max-width: 100vw;
-    min-height: 100vh;
+    min-height: 87vh;
     position: relative;
     background-image: url("../../../public/dark-bg.jpg");
     background-size: contain;
+    padding-bottom: 2rem;
   }
 
   .form-modificar-usuario {
     grid-area: formulario-usuario;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 0.2fr 0.2fr 0.2fr;
+    grid-template-rows: auto auto auto;
     justify-items: flex-start;
     background-color: azure;
     width: 95%;
@@ -206,12 +231,11 @@ textarea {
     background-color: rgb(226, 223, 223);
     border-radius: 5px;
     gap: 0.5rem;
-    /* el grid no funciona */
     grid-template-areas:
-      "formulario-usuario divFotoUsuario"
-      "formulario-usuario divContraseña"
-      "divGuardarCambios divGuardarCambios"
-      "divDeleteUsuario divDeleteUsuario";
+      "formFieldsetUsuario divFotoUsuario"
+      "formFieldsetUsuario divContraseña"
+      "divGuardarCambios divDeleteUsuario";
+    max-width: 40rem;
   }
   .header {
     position: absolute;
@@ -219,7 +243,13 @@ textarea {
     left: 0;
     right: 0;
   }
-
+  #image {
+    width: 150px;
+    height: 150px;
+  }
+  .form-fieldset-usuario {
+    grid-area: formFieldsetUsuario;
+  }
   .form-modificar-usuario > form {
     display: flex;
     flex-direction: column;
@@ -239,12 +269,25 @@ textarea {
 
   .div-contraseña {
     grid-area: divContraseña;
+    min-width: 100%;
+    display: flex;
+    align-items: center;
   }
-
-  .btn-guardar-cambios {
-    grid-area: divGuardarCambios;
+  .btn-cambiar-contraseña {
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
+    width: 12rem;
+  }
+  .guardar-cambios {
+    grid-area: divGuardarCambios;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    flex-direction: column;
+  }
+  .btn-guardar-cambios {
+    display: flex;
     align-items: center;
   }
   .div-delete-usuario {
