--- a/Frontend/src/pages/HomePageLogin/noticiasLogueado.css
+++ b/Frontend/src/pages/HomePageLogin/noticiasLogueado.css
@@ -182,9 +182,6 @@ img {
   .contenedor-noticias div h3 {
     font-size: 1.3em;
   }
-  .title > h1 {
-    font-size: 2.6rem;
-  }
   .buscador-input {
     width: 100%;
     display: flex;
@@ -231,8 +228,15 @@ img {
 @media (min-width: 900px) {
   .noticias-acciones {
     justify-content: flex-end;
+    padding-right: 2rem;
   }
   .contenedor-noticiasLogueado {
     margin-left: 8rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .noticias-acciones {
+    padding-right: 6rem;
   }
 }
