--- a/Frontend/src/pages/modificarUsuario/modificarUsuario.css
+++ b/Frontend/src/pages/modificarUsuario/modificarUsuario.css
@@ -186,18 +186,17 @@ textarea {
     justify-content: center;
     align-items: center;
     max-width: 100vw;
-    min-height: 100vw;
+    min-height: 100vh;
     position: relative;
     background-image: url("../../../public/dark-bg.jpg");
     background-size: contain;
-    padding: 1rem;
   }
 
   .form-modificar-usuario {
     grid-area: formulario-usuario;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 0.2fr 0.2fr 0.2fr;
+    grid-template-rows: 1fr 1fr 1fr;
     justify-items: flex-start;
     background-color: azure;
     width: 95%;
@@ -207,12 +206,11 @@ textarea {
     background-color: rgb(226, 223, 223);
     border-radius: 5px;
     gap: 0.5rem;
-    /* el grid no funciona */
+
     grid-template-areas:
       "formulario-usuario divFotoUsuario"
       "formulario-usuario divContraseña"
-      "divGuardarCambios divGuardarCambios"
-      "divDeleteUsuario divDeleteUsuario";
+      "divGuardarCambios  divDeleteUsuario";
   }
   .header {
     position: absolute;
