--- a/Frontend/src/pages/modificarUsuario/modificarUsuario.css
+++ b/Frontend/src/pages/modificarUsuario/modificarUsuario.css
@@ -33,9 +33,6 @@
   border-radius: 5px;
   gap: 0.5rem;
 }
-textarea {
-  resize: none;
-}
 
 .form-modificar-usuario > form {
   display: flex;
@@ -48,7 +45,8 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 0;
+  padding-top: 1rem;
+  margin-top: 1rem;
   border: none;
   border-radius: 5px;
 }
@@ -60,22 +58,42 @@ textarea {
   object-fit: cover;
 }
 
-#input-email,
-#input-nombre,
-#input-nickName,
-#input-biografia,
-#deleteUserEmail,
-#input-newPassword,
-#input-confirmPassword::placeholder {
-  background-color: rgb(183, 148, 240);
-  color: rgb(8, 11, 136);
+#modificar-usuario input {
+  height: 1.5rem;
 }
+
+#modificar-usuario input {
+  width: 12rem;
+  border: none;
+  box-shadow: 2px 2px 3px inset rgba(26, 53, 115, 0.4);
+  background-color: rgb(222, 226, 248);
+  border-radius: 3px;
+}
+
+#modificar-usuario textarea {
+  resize: none;
+  height: 8rem;
+  width: 16rem;
+  border: none;
+  box-shadow: 2px 2px 3px inset rgba(26, 53, 115, 0.4);
+  background-color: rgb(222, 226, 248);
+  border-radius: 3px;
+}
+
+.cambiar-biografia label {
+  font-weight: bold;
+}
+
 .file-upload-component {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0.5rem;
+  margin: 0.3rem;
   gap: 0.5rem;
+}
+
+.file-upload-component input {
+  font-size: 0.8em;
 }
 
 .div-contraseña {
@@ -92,7 +110,12 @@ textarea {
 }
 
 .div-contraseña input {
-  width: 70%;
+  width: 80%;
+  height: 1.5rem;
+  border: none;
+  box-shadow: 2px 2px 3px inset rgba(26, 53, 115, 0.4);
+  background-color: rgb(222, 226, 248);
+  border-radius: 3px;
 }
 .guardar-cambios {
   grid-area: divGuardarCambios;
@@ -123,6 +146,22 @@ textarea {
   gap: 0.5rem;
   width: 100%;
 }
+
+#deleteUserEmail {
+  height: 2rem;
+}
+
+.verificar-correo .borrarUsuario {
+  font-size: 0.8em;
+}
+
+.verificar-correo .error {
+  font-size: 0.6em;
+  text-align: center;
+  color: crimson;
+  font-style: italic;
+}
+
 .labelConfirmPassword,
 .labelNewPassword {
   font-weight: bold;
@@ -136,12 +175,12 @@ textarea {
   flex-direction: column;
   align-items: start;
   gap: 0.5rem;
-  padding: 1.3rem;
+  padding: 0.9rem;
   width: 100%;
   height: 100%;
   border-radius: 5px;
   background-color: white;
-  box-shadow: 2px 2px 15px rgba(26, 53, 115, 0.4);
+  box-shadow: 2px 2px 5px rgba(26, 53, 115, 0.4);
 }
 
 #modificar-usuario legend {
@@ -169,21 +208,6 @@ textarea {
   margin: 1rem 0;
 }
 
-.cambiar-biografia {
-  width: 100%;
-}
-
-.cambiar-biografia textarea {
-  width: 100%;
-}
-
-.cambiar-biografia label {
-  font-weight: bold;
-}
-
-#deleteUserEmail {
-  height: 70%;
-}
 .borrarUsuario {
   background-color: red;
   color: rgb(252, 250, 250);
@@ -224,7 +248,6 @@ textarea {
     grid-template-rows: auto auto auto;
     justify-items: flex-start;
     background-color: azure;
-    width: 95%;
     height: 100%;
     align-self: flex-start;
     box-shadow: 2px 2px 5px rgba(26, 53, 115, 0.6);
@@ -235,7 +258,7 @@ textarea {
       "formFieldsetUsuario divFotoUsuario"
       "formFieldsetUsuario divContraseña"
       "divGuardarCambios divDeleteUsuario";
-    max-width: 40rem;
+    width: 600px;
   }
   .header {
     position: absolute;
@@ -258,13 +281,12 @@ textarea {
   }
   .div-fotoUsuario {
     grid-area: divFotoUsuario;
-    height: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem 0;
     border: none;
     border-radius: 5px;
+    border: 2px dotted rgba(13, 14, 44, 0.3);
   }
 
   .div-contraseña {
