--- a/Frontend/src/components/shared/title/title.css
+++ b/Frontend/src/components/shared/title/title.css
@@ -1,6 +1,115 @@
 @import url("https://fonts.googleapis.com/css2?family=Bungee&display=swap");
 
-h1 {
+:root {
+  --color-primary: rgb(67, 77, 170);
+  --color-secondary: rgb(19, 45, 131);
+  --color-tertiary: rgb(15, 34, 97);
+  --color-quaternary: rgb(12, 26, 75);
+  --color-quinary: rgb(8, 17, 49);
+}
+
+.content {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.text_shadows {
+  text-shadow: 2px 2px 0 var(--color-secondary), 4px 4px 0 var(--color-tertiary),
+    6px 6px var(--color-quaternary), 9px 9px 0 var(--color-quinary);
+  font-family: bungee, sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 2rem;
+  text-align: center;
+  margin: 0;
+  color: var(--color-primary);
+  animation: shadows 1.2s ease-in infinite, move 1.2s ease-in infinite;
+  letter-spacing: 0.25rem;
+  line-height: 2.5rem;
+  text-decoration: none;
+}
+
+@keyframes shadows {
+  0% {
+    text-shadow: none;
+  }
+  10% {
+    text-shadow: 2px 2px 0 var(--color-secondary);
+  }
+  20% {
+    text-shadow: 2px 2px 0 var(--color-secondary),
+      4px 4px 0 var(--color-tertiary);
+  }
+  30% {
+    text-shadow: 2px 2px 0 var(--color-secondary),
+      4px 4px 0 var(--color-tertiary), 6px 6px var(--color-quaternary);
+  }
+  40% {
+    text-shadow: 2px 2px 0 var(--color-secondary),
+      4px 4px 0 var(--color-tertiary), 6px 6px var(--color-quaternary),
+      9px 9px 0 var(--color-quinary);
+  }
+  50% {
+    text-shadow: 2px 2px 0 var(--color-secondary),
+      4px 4px 0 var(--color-tertiary), 6px 6px var(--color-quaternary),
+      9px 9px 0 var(--color-quinary);
+  }
+  60% {
+    text-shadow: 2px 2px 0 var(--color-secondary),
+      4px 4px 0 var(--color-tertiary), 6px 6px var(--color-quaternary),
+      9px 9px 0 var(--color-quinary);
+  }
+  70% {
+    text-shadow: 2px 2px 0 var(--color-secondary),
+      4px 4px 0 var(--color-tertiary), 6px 6px var(--color-quaternary);
+  }
+  80% {
+    text-shadow: 2px 2px 0 var(--color-secondary),
+      4px 4px 0 var(--color-tertiary);
+  }
+  90% {
+    text-shadow: 2px 2px 0 var(--color-secondary);
+  }
+  100% {
+    text-shadow: none;
+  }
+}
+
+@keyframes move {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  40% {
+    transform: translate(-9px, -9px);
+  }
+  50% {
+    transform: translate(-9px, -9px);
+  }
+  60% {
+    transform: translate(-9px, -9px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+
+@media (min-width: 600px) {
+  .text_shadows {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 900px) {
+  .text_shadows {
+    font-size: 3.3rem;
+  }
+}
+
+/* --------------------------------------------------------------------- */
+
+/* h1 {
   line-height: 1;
   font-family: "Bungee", cursive;
   text-shadow: 0 0 13px rgba(0, 0, 0, 0.4);
@@ -31,4 +140,4 @@ h1 {
   .title > h1 {
     font-size: 3.7em;
   }
-}
+} */
