--- a/Frontend/src/pages/modificarUsuario/modificarUsuario.css
+++ b/Frontend/src/pages/modificarUsuario/modificarUsuario.css
@@ -10,7 +10,8 @@
   align-content: center;
   justify-content: center;
   max-width: 100vw;
-  min-height: 100vw;
+  min-height: 100%;
+  height: 100%;
   position: relative;
   background-image: url("../../../public/dark-bg.jpg");
   background-size: contain;
@@ -233,12 +234,9 @@
     align-content: center;
     justify-content: center;
     align-items: center;
-    max-width: 100vw;
-    min-height: 100vw;
     position: relative;
     background-image: url("../../../public/dark-bg.jpg");
     background-size: contain;
-    padding: 1rem;
   }
 
   .form-modificar-usuario {
@@ -256,14 +254,10 @@
     gap: 0.5rem;
     /* el grid no funciona */
     grid-template-areas:
-
-     
-
       "formFieldsetUsuario divFotoUsuario"
       "formFieldsetUsuario divContraseña"
       "divGuardarCambios divDeleteUsuario";
     width: 600px;
-
   }
   .header {
     position: absolute;
