--- a/Frontend/src/pages/HomePageLogin/noticiasLogueado.css
+++ b/Frontend/src/pages/HomePageLogin/noticiasLogueado.css
@@ -21,6 +21,12 @@
 .divContenedorNoticias {
   min-width: 100%;
 }
+
+.divContenedorNoticias > h3 {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
 .contenedor-log {
   margin-top: 6rem;
   grid-area: contenedor;
