--- a/Frontend/src/pages/perfilUsuario/perfilUsuario.css
+++ b/Frontend/src/pages/perfilUsuario/perfilUsuario.css
@@ -1,4 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap");
+
 .contenedor-perfilUsuario {
+  display: grid;
+  grid-template-rows: 6rem 4rem auto;
+  grid-template-columns: 100vw;
+  grid-template-areas:
+    "header    "
+    "returnButton"
+    "perfilUsuario  ";
+  justify-items: center;
+  /* align-content: center;
+  justify-content: center;  */
+  min-height: 100%;
+  position: relative;
   flex-grow: 1;
   background-image: url("/public/dark-bg.jpg");
   background-size: contain;
@@ -11,9 +25,24 @@
   justify-content: center;
 }
 .contenedor-infoPerfilUsuario {
-  margin: 1rem;
-  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.5rem;
   text-align: justify;
+  border: 1px solid rgba(46, 40, 89, 0.3);
+  border-radius: 10px;
+  background-color: white;
+}
+
+.contenedor-infoPerfilUsuario p {
+  font-family: "PT Sans", sans-serif;
+  font-size: 0.8em;
+  text-align: justify;
+}
+.contenedor-infoPerfilUsuario p span {
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
 }
 .datoUsuario {
   margin-bottom: 0.5rem;
@@ -24,11 +53,52 @@
   max-width: 20rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
+  grid-area: perfilUsuario;
+  padding-bottom: 1rem;
+}
+
+.perfilUsuario h3 {
+  margin: 0 1rem;
+  color: rgb(65, 84, 134);
+  line-height: 1.5rem;
 }
 .perfilUsuarioDos {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   padding: 1rem;
-  box-shadow: 2px 2px 5px rgba(26, 53, 115, 0.6);
+  box-shadow: -2px 2px 5px rgba(65, 84, 134, 0.8);
   background-color: rgb(226, 223, 223);
+  border-radius: 10px;
+}
+
+.contenedor-foto-perfilUsuario {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  padding-top: 0;
+  border: 1px solid rgba(46, 40, 89, 0.3);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+}
+
+.contenedor-foto-perfilUsuario h4 {
+  color: rgb(65, 84, 134);
+  border: 1px solid rgba(46, 40, 89, 0.5);
+  border-radius: 9px;
+  background-color: white;
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  padding: 0.3rem;
+  margin: 0.3rem 0;
+}
+
+.perfilUsuarioDos img {
+  width: 100%;
+  border-radius: 10px;
 }
