--- a/Frontend/src/pages/perfilUsuario/perfilUsuario.css
+++ b/Frontend/src/pages/perfilUsuario/perfilUsuario.css
@@ -57,7 +57,7 @@
   align-items: center;
   margin-bottom: 1rem;
   grid-area: perfilUsuario;
-  padding-bottom: 1rem;
+  padding: 1rem 0;
 }
 
 .perfilUsuario h3 {
