--- a/Frontend/src/components/shared/title/title.css
+++ b/Frontend/src/components/shared/title/title.css
@@ -13,6 +13,8 @@
   align-content: center;
   justify-content: center;
   text-decoration: none;
+  padding-top: 0.3rem;
+  padding-left: 0.3rem;
 }
 
 .text_shadows {
