--- a/Frontend/src/pages/perfilUsuario/perfilUsuario.css
+++ b/Frontend/src/pages/perfilUsuario/perfilUsuario.css
@@ -39,6 +39,8 @@
   font-family: "PT Sans", sans-serif;
   font-size: 0.8em;
   text-align: justify;
+  hyphens: auto;
+  word-break: break-all;
 }
 .contenedor-infoPerfilUsuario p span {
   font-family: "PT Sans", sans-serif;
@@ -58,6 +60,7 @@
   margin-bottom: 1rem;
   grid-area: perfilUsuario;
   padding: 1rem 0;
+  height: fit-content;
 }
 
 .perfilUsuario h3 {
