--- a/Frontend/src/components/noticias/noticiasList.css
+++ b/Frontend/src/components/noticias/noticiasList.css
@@ -17,11 +17,13 @@
 .liNoticias {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: center;
   box-shadow: 2px 2px 5px rgba(26, 53, 115, 0.6);
   background-color: rgb(226, 223, 223);
   border-radius: 5px;
   margin-bottom: 2rem;
+  margin-left: 5%;
+  margin-right: 5%;
   padding: 1rem 0.4rem;
   padding-top: 0.3rem;
   hyphens: auto;
