--- a/Frontend/src/pages/HomePageLogin/noticiasLogueado.css
+++ b/Frontend/src/pages/HomePageLogin/noticiasLogueado.css
@@ -185,6 +185,7 @@ img {
   .titulo {
     width: 100%;
     height: 1.7rem;
+    padding-top: 10px;
   }
 
   .ultimas-noticias button {
@@ -214,6 +215,8 @@ img {
   .titulo {
     width: 100%;
     height: 1.7rem;
+    padding-top: 12px;
+    padding-bottom: 12px;
   }
 
   .ultimas-noticias {
