--- a/Frontend/src/pages/login/login.css
+++ b/Frontend/src/pages/login/login.css
@@ -1,19 +1,5 @@
-.content-login {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-  border: 1px solid blue;
-  box-shadow: 0 0 10px blue;
-  border-radius: 10px;
-  margin-top: 75px;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+.form-login {
+  margin-top: 50px;
 }
 
 .labelLogin {
