--- a/Frontend/src/pages/register/register.css
+++ b/Frontend/src/pages/register/register.css
@@ -1,15 +1,8 @@
-.content-register {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 10px;
-  border: 1px solid blue;
-  box-shadow: 0 0 10px blue;
-  border-radius: 10px;
-  margin-top: 50px;
-  margin-bottom: 5%;
+.form-register {
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
+
 .form-group {
   display: flex;
   flex-direction: column;
